fix: change html for better readability

--- a/css/_header-top.scss
+++ b/css/_header-top.scss
@@ -38,6 +38,7 @@
     &-list {
       display: flex;
       padding-left: 0;
+      cursor: pointer;
     }
     & > ul {
       padding-left: 0;
@@ -46,7 +47,6 @@
       display: inline-block;
       vertical-align: middle;
       font-size: 24px;
-      // padding-top: 4px;
     }
 
     &-sub {
@@ -99,6 +99,7 @@
     font-size: 24px;
     &:hover {
       color: $red;
+      transition: 0.4s ease-in;
     }
   }
 
@@ -134,6 +135,10 @@
       display: block;
     }
   }
+}
+.li-red a:hover {
+  text-decoration: none;
+  color: black;
 }
 .entri-icon {
   display: none;
@@ -214,7 +219,7 @@
     display: block;
     position: absolute;
     left: -25px;
-    bottom: -140px;
+    bottom: -188px;
     background-color: white;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     z-index: 102;
